--- a/.github/workflows/main_materialwirtschaft-main.yml
+++ b/.github/workflows/main_materialwirtschaft-main.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy Node.js app to Azure Web App - Materialwirtschaft-main
+name: Build and deploy Node.js app to Azure Web App - Versand-Verkauf-Service
 
 on:
   push:
@@ -14,18 +14,19 @@ jobs:
     runs-on: windows-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@main
 
       - name: Set up Node.js version
         uses: actions/setup-node@v1
         with:
-          node-version: '16.x'
+          node-version: '~12'
 
       - name: npm install, build, and test
         run: |
           npm install
-          npm run build --if-present
-          npm run test --if-present
+          npm run build --prod
+        working-directory: .
+      
       
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
@@ -51,6 +52,5 @@ jobs:
         id: deploy-to-webapp
         with:
           app-name: 'Materialwirtschaft-main'
-          slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_D9777AD3653848309D9BA9532F04E07F }}
           package: .
